# audioviz-desk

./: .flake8  .gitignore  .isort.cfg  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
audioviz/: config.py  effect.py  filter.py  pypulse.py  record.py  render.py
audioviz/cli/: __init__.py  run.py
audioviz/cli/data/: config.cfg
